--- a/views/adminViews/categoryManagement.hbs
+++ b/views/adminViews/categoryManagement.hbs
@@ -1,125 +1,186 @@
 {{> adminHeader}}
 
-    <!-- Add Category Modal Button trigger modal -->
-    <div class="pt-3">
-        <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Add new Category
-        </button>
-    </div>
+<!-- Add Category Modal Button trigger modal -->
+<div class="pt-3">
+    <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Add new Category
+    </button>
+</div>
 
-    <!--Add Category Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add New Category</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form action="/admin/categoryManagement/add" method="POST">
-                    <div class="modal-body">
-                        <div class="input-group mb-3">
-                            <input name="categoryName" type="text" class="form-control" placeholder="Category Name"
-                                required>
-                        </div>
-                        <div class="input-group mb-3">
-                            <input name="categoryDescription" type="text" class="form-control pb-5"
-                                placeholder="Description" required>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-info">Save changes</button>
-                    </div>
-                </form>
+<!--Add Category Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add New Category</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <form action="/admin/categoryManagement/add" method="POST">
+                <div class="modal-body">
+                    <div class="input-group mb-3">
+                        <input name="categoryName" type="text" class="form-control" placeholder="Category Name"
+                            required>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input name="categoryDescription" type="text" class="form-control pb-5"
+                            placeholder="Description" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-info">Save changes</button>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 
-    <!-- category already exists- alert box div -->
-    <div class="p-3"></div>
-    {{#if categoryExists}}
-    <div class="alert alert-danger" role="alert">
-        Category <strong>{{categoryExists.categoryName}}</strong>  Already Exists
-    </div>
-    {{/if}}
+<!-- category already exists- alert box div -->
+<div class="p-3"></div>
+{{#if categoryExists}}
+<div class="alert alert-danger" role="alert">
+    Category <strong>{{categoryExists.categoryName}}</strong> Already Exists
+</div>
+{{/if}}
 
-    <div class="container pt-3">
-        <table id="example" class="display" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Category Name</th>
-                    <th>Description</th>
-                    <th>List/Unlist</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each categoryData}}
-                <tr>
-                    <td>{{this.categoryName}}</td>
-                    <td>{{this.categoryDescription}}</td>
-                    {{#if this.isListed}}
-                    <td>
-                        <form action="/admin/categoryManagement/unList/{{this._id}}" method="POST">
-                            <button type="submit" class="btn btn-success">Unlist</button>
-                        </form>
-                    </td>
-                    {{else}}
-                    <td>
-                        <form action="/admin/categoryManagement/list/{{this._id}}" method="POST">
-                            <button type="submit" class="btn btn-danger">List</button>
-                        </form>
-                    </td>
-                    {{/if}}
-                    <td>
-                        <button type="button" class="btn btn-info" data-bs-toggle="modal"
-                            data-bs-target="#editModal{{@index}}">
-                            <i class="fas fa-edit"></i>
-                        </button>
+<div class="container pt-3">
+    <table id="example" class="display" style="width:100%">
+        <thead>
+            <tr>
+                <th>Category Name</th>
+                <th>Description</th>
+                <th>List/Unlist</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each categoryData}}
+            <tr>
+                <td>{{this.categoryName}}</td>
+                <td>{{this.categoryDescription}}</td>
+                {{#if this.isListed}}
+                <td>
+                    <button id="unlistBtn{{@index}}" class="btn btn-success">Unlist</button>
+                </td>
 
-                        <button type="button"
-                            onclick="return confirm('Are you sure you want to delete {{this.categoryName}} category?')"
-                            class="btn btn-info"><a href="/admin/categoryManagement/delete/{{this._id}}">
-                                <i class="fa fa-trash" aria-hidden="true"></i></a>
-                        </button>
+                <script>
+                    let unlistBtn{{@index}}= document.getElementById('unlistBtn{{@index}}')
+                        unlistBtn{{@index}}.addEventListener('click', (e) => {
+                        e.preventDefault()
+                        
+                        Swal.fire({
+                            title: "Are you sure?",
+                            text: "You want to unlist {{this.categoryName}} ?!",
+                            icon: "warning",
+                            showCancelButton: true,
+                            confirmButtonColor: "#3085d6",
+                            cancelButtonColor: "#d33",
+                            confirmButtonText: "Yes, unlist it!"
+                        }).then((result) => {
+                            if (result.isConfirmed) {
 
-                    </td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
-    </div>
+                                fetch('/admin/categoryManagement/unlist/{{this._id}}', { method: 'PATCH' }).then()
 
-    <!-- Edit Modal  -->
-    {{#each categoryData}}
-    <div class="modal fade" id="editModal{{@index}}" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Category</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form action="/admin/categoryManagement/edit/{{this._id}}" method="POST">
-                    <div class="modal-body">
-                        <div class="input-group mb-3">
-                            <input name="categoryName" type="text" class="form-control" value="{{this.categoryName}}"
-                                required>
-                        </div>
-                        <div class="input-group mb-3">
-                            <input name="categoryDescription" type="text" class="form-control pb-5"
-                                value="{{this.categoryDescription}}" required>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-info">Save changes</button>
-                    </div>
-                </form>
+                                Swal.fire({
+                                    title: "Unlisted!",
+                                    text: "{{this.categoryName}} has been unlisted.",
+                                    icon: "success"
+                                }).then(() => location.reload())
+                            }
+                        });
+                    })
+
+
+                </script>
+
+
+                {{else}}
+                <td>
+
+                    <button id="listBtn{{@index}}" class="btn btn-danger">List</button>
+
+                </td>
+
+                <script>
+                    let listBtn{{@index}}= document.getElementById('listBtn{{@index}}')
+                        listBtn{{@index}}.addEventListener('click', (e) => {
+                        e.preventDefault()
+                        Swal.fire({
+                            title: "Are you sure?",
+                            text: "You want to list {{this.categoryName}} ?!",
+                            icon: "warning",
+                            showCancelButton: true,
+                            confirmButtonColor: "#3085d6",
+                            cancelButtonColor: "#d33",
+                            confirmButtonText: "Yes, list it!"
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+
+                                fetch('/admin/categoryManagement/list/{{this._id}}', { method: 'PATCH' }).then()
+
+                                Swal.fire({
+                                    title: "Listed!",
+                                    text: "{{this.categoryName}} has been listed.",
+                                    icon: "success"
+                                }).then(() => location.reload())
+                            }
+                        });
+                    })
+
+
+                </script>
+
+
+
+                {{/if}}
+                <td>
+                    <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                        data-bs-target="#editModal{{@index}}">
+                        <i class="fas fa-edit"></i>
+                    </button>
+
+                    {{!-- <button type="button"
+                        onclick="return confirm('Are you sure you want to delete {{this.categoryName}} category?')"
+                        class="btn btn-info"><a href="/admin/categoryManagement/delete/{{this._id}}">
+                            <i class="fa fa-trash" aria-hidden="true"></i></a>
+                    </button> --}}
+
+                </td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
+
+<!-- Edit Modal  -->
+{{#each categoryData}}
+<div class="modal fade" id="editModal{{@index}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Category</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <form action="/admin/categoryManagement/edit/{{this._id}}" method="POST">
+                <div class="modal-body">
+                    <div class="input-group mb-3">
+                        <input name="categoryName" type="text" class="form-control" value="{{this.categoryName}}"
+                            required>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input name="categoryDescription" type="text" class="form-control pb-5"
+                            value="{{this.categoryDescription}}" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-info">Save changes</button>
+                </div>
+            </form>
         </div>
     </div>
-    {{/each}}
+</div>
+{{/each}}
 
 <allScripts>
 
