--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -6,9 +6,9 @@
             <div class="col-lg-3">
                 <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
                     <div class="card-header">Your Products Count</div>
-                    <div class="card-body">
+                    <div class="card-body d-flex">
                         <h5 id="productsCount" class="card-title"></h5>
-                        <h6 id="categoryCount"></h6>
+                        <h6 id="categoryCount" style="margin-left: 10px;"></h6>
                     </div>
                 </div>
             </div>
