--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -70,7 +70,7 @@
                             <a class="nav-link" aria-current="page" href="/admin/salesReport">Sales Report</a>
                         </li>
                     </ul>
-                    <form action="/logout" method="post" class="d-flex">
+                    <form action="/admin/logout" method="post" class="d-flex">
                         <button class="btn btn-danger" type="submit">Logout</button>
                     </form>
                 </div>
