--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -129,11 +129,11 @@
                                 </div>
                             </div>
                             <div class="input-group mb-3">
-                                <input name="productPrice" type="tel" class="form-control" placeholder="Product Price"
+                                <input name="productPrice" type="tel" class="form-control" min="100" placeholder="Product Price"
                                     required>
                             </div>
                             <div class="input-group mb-3">
-                                <input name="productStock" type="tel" class="form-control" placeholder="Product Stock"
+                                <input name="productStock" type="tel" class="form-control" min="0" placeholder="Product Stock"
                                     required>
                             </div>
                         </div>
